# oneapi

./: .gitignore
source/: CMakeLists.txt
source/rng/: CMakeLists.txt  rng.cpp  rng.hpp
source/sample/: CMakeLists.txt  main.cpp
source/tasks/: CMakeLists.txt
source/tasks/1_permutations_cxx/: 1_permutations_cxx.cpp  permutations_cxx.cpp
source/tasks/2_integral_oneapi/: 2_integral_oneapi.cpp  integral_oneapi.cpp
source/tasks/3_jacobi_acc_oneapi/: 3_jacobi_acc_oneapi.cpp  jacobi_acc_oneapi.cpp  jacobi_acc_oneapi.h
source/tasks/4_jacobi_dev_oneapi/: 4_jacobi_dev_oneapi.cpp  jacobi_dev_oneapi.cpp  jacobi_dev_oneapi.h
source/tasks/5_jacobi_shared_oneapi/: 5_jacobi_shared_oneapi.cpp  jacobi_shared_oneapi.cpp  jacobi_shared_oneapi.h
source/tasks/6_gemm_block_oneapi/: 6_gemm_block_oneapi.cpp  gemm_block_oneapi.cpp  gemm_block_oneapi.h
source/tasks/7_gemm_mkl_oneapi/: 7_gemm_mkl_oneapi.cpp  gemm_mkl_oneapi.cpp  gemm_mkl_oneapi.h
